--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,5 +1,5 @@
 .main h2 {
-  margin: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .main {
