--- a/styles/partials/_resets.scss
+++ b/styles/partials/_resets.scss
@@ -6,9 +6,9 @@
   margin: 1rem;
 }
 
-p{
-    margin: 0.5rem;
-}
+// p{
+//     margin-left: 0.5rem;
+// }
 
 html,
 body,
